--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+.fa-search {
+    font-size: 25px;
+}
+
 .searchbox {
     position: relative;
     min-width: 50px;
@@ -10,7 +14,7 @@
     -ms-transition: width 0.3s;
     -o-transition: width 0.3s;
     transition: width 0.3s;
-    margin-top:30px;
+    margin-top: 30px;
 }
 
 .searchbox-input {
@@ -44,8 +48,8 @@
     text-align: center;
     cursor: pointer;
     color: #FFFFFF;
-    padding-top:10px;
-    background:black;
+    padding-top: 10px;
+    background: black;
     /* background: #ff0000; */
 }
 
