--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,10 @@
     font-size: 25px;
 }
 
+body{
+    background-color:black;
+}
+
 .searchbox {
     position: relative;
     min-width: 50px;
@@ -66,12 +70,12 @@
 .backarrow {
     padding-left: 20px !important;
     padding-top: 40px !important;
-    width: 4.5%;
+    width: 6%;
 }
 
 .title {
     padding-top: 40px !important;
-    font-size: 20px;
+    font-size: 30px;
     color: white;
     padding-left: 20px !important;
 }
@@ -97,6 +101,7 @@
 .tiletitle {
     padding-bottom: 90px;
     font-size: 20px;
+    color:lightgrey;
 }
 
 #searchtext {
